# angstromscd-monorepo

./: .env.example  .gitignore  AGENTS.md  BAML_INTEGRATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CRUSH.md  Dockerfile  HEALTHCARE_PRODUCTION_REQUIREMENTS.md  LICENSE  MIGRATION_GUIDE.md  MVP_READINESS_REPORT.md  PRD-Local-AI-Models-Integration.md  README.md  SERVICE_STATUS_LOG.md  apiBreakdown.md  biome.json  bun.lockb  dev.sh  env.template  fly.toml  package.json  playwright.config.ts  test-baml-integration.js  tsconfig.json
.github/workflows/: ci.yml
apps/api/: .env.example  E2B_INTEGRATION.md  README.md  package.json
apps/desktop/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop-swift/: Package.swift  README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: api.rs  mod.rs  native.rs
apps/frontend/: README.md  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/gateway/: package.json  tsconfig.json
cli/: cli-demo.ts  tsconfig.json
convex/: .gitignore  README.md  notes.ts  schema.ts  tsconfig.json
docs/: VOC-PREDICTION-ARCHITECTURE.md  e2b-sandbox-architecture.md  realtime-protocol.md
e2e/: auth.spec.ts  chat.spec.ts  conversations.spec.ts  prior-auth.spec.ts  test-utils.ts  voc-prediction.spec.ts
infra/: .env.example  Dockerfile.postgres  ORBSTACK.md  README.md  docker-compose.yml
infra/scripts/: bootstrap-nats.ts  create-conversation-tables.sql  create-outbox.sql  (+11 more)
(+112 files in other folders)
